--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgba(139, 228, 203, 1);">
         <div class="container">
 
-            <a class="gugi-font navbar-brand" href="/main/index.html">
+            <a class="gugi-font navbar-brand" href="https://giyoungii.github.io/tokyotrip/">
                 <img src="tokyo tower.svg" alt="로고">
                 tokyo trip</a>
 
