--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
             <div class="collapse navbar-collapse" id="nav-menu">
                 <ul class="navbar-nav ms-auto my-2">
-                    <li class="nav-item"><a class="nav-link" href="">home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/tokyohome/">home</a></li>
                    
-                    <li class="nav-item"><a class="nav-link" href="/date/index.html">date</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">map</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/toykodate/">date</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/tokyomap/">map</a></li>
                 </ul>
             </div>
         </div>
