--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgba(139, 228, 203, 1);">
     <div class="container">
-        <a class="gugi-font navbar-brand" href="index.html">
+        <a class="gugi-font navbar-brand" href="https://giyoungii.github.io/tokyotrip/">
             <img src="tokyo tower.svg" alt="로고">
             tokyo trip
         </a>
@@ -32,9 +32,9 @@
 
         <div class="collapse navbar-collapse" id="nav-menu">
             <ul class="navbar-nav ms-auto my-2">
-                <li class="nav-item"><a class="nav-link" href="/home/index.html">home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/date/index.html">date</a></li>
-                <li class="nav-item"><a class="nav-link" href="/map/index.html">map</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/tokyohome/">home</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/toykodate/</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://giyoungii.github.io/tokyomap/">map</a></li>
             </ul>
         </div>
     </div>
